# memos-mcp

./: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  main.py  package.json  pyproject.toml  requirements.txt  test_server.py  verify_server.py
memos_mcp/: __init__.py  server.py
memos_mcp/prompts/: __init__.py
memos_mcp/resources/: __init__.py
memos_mcp/tools/: __init__.py
memos_mcp/utils/: client.py  config.py
tests/: __init__.py  conftest.py  test_mcp_protocol.py  test_server_process.py  test_server_resources.py  test_server_tools.py  test_tools.py  test_verify_server.py
